[package]
name = "permission-gate"
version = "0.1.0"
edition = "2024"

[lib]
name = "permission_gate"
path = "src/lib.rs"

[[bin]]
name = "permission-gate"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
clap = { version = "4", features = ["derive"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
